# leosac

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  conanfile.py  merge_result.py  toto.cpp
.github/actions/conan-install-build-package-for-profile/: action.yml
.github/actions/install-build-deps/: action.yml
.github/workflows/: build.yml  conan.yml
LeosacSharp/: LeosacSharp.sln  docker-compose.yml
LeosacSharp/LeosacAPI/: ClientMessage.cs  LeosacAPI.cs  LeosacException.cs  ServerMessage.cs  StatusCode.cs
LeosacSharp/LeosacDB/: AccessPoint.cs  AccessPointEvent.cs  AccessPointUpdate.cs  AccessPointUpdate1.cs  AuditEntry.cs  AuditEntryChild.cs  Credential.cs  CredentialEvent.cs  Door.cs  DoorEvent.cs  Group.cs  GroupEvent.cs  HardwareBuzzer.cs  HardwareDevice.cs  HardwareExternalMessage.cs  HardwareExternalServer.cs  HardwareGpio.cs  HardwareLed.cs  HardwareRfidreader.cs  LeosacDB.csproj  LogEntry.cs  PinCode.cs  Rfidcard.cs  Schedule.cs  ScheduleEvent.cs  ScheduleMapping.cs  ScheduleMapping1.cs  ScheduleMappingCred.cs  ScheduleMappingDoor.cs  ScheduleMappingGroup.cs  ScheduleMappingUser.cs  ScheduleTimeframe.cs  SchemaVersion.cs  SmtpAudit.cs  SmtpConfig.cs  SmtpConfigServer.cs  Token.cs  Update.cs  UpdateEvent.cs  User.cs  (+9 more)
LeosacSharp/LeosacIntegration/: Dockerfile  LeosacDockerHelper.cs  LeosacIntegration.csproj  Program.cs
LeosacSharp/LeosacIntegrationTests/: LeosacIntegrationTests.csproj  LeosacTestBase.cs  TestHelper.cs
LeosacSharp/LeosacIntegrationTests/DefaultLoginTests/: AdvancedDefaultLoginTest.cs  ChangePasswordTest.cs  DefaultLoginTest.cs  SimpleDefaultLoginTest.cs
cfg/: CMakeLists.txt
conan/: Dockerfile  Dockerfile.base  Dockerfile.build_arm64  Dockerfile.build_x64  Dockerfile.integration_tests_x64  Dockerfile.unit_tests_x64  integration_entrypoint.sh  leosac_options  profile  profilearm32  profilearm64  profileci
src/: CMakeLists.txt
src/core/: SecurityContext.cpp  kernel.cpp
src/core/auth/: Group.cpp
src/core/tasks/: Task.cpp
src/db/: CMakeLists.txt  dummy.cpp
src/modules/: CMakeLists.txt
src/modules/alarms/: CMakeLists.txt
src/modules/auth/auth-db/: CMakeLists.txt
src/modules/auth/auth-file/: CMakeLists.txt
src/modules/bench-toggle/: CMakeLists.txt
src/modules/doorman/: CMakeLists.txt
src/modules/event-publish/: CMakeLists.txt
src/modules/instrumentation/: CMakeLists.txt
src/modules/led-buzzer/: CMakeLists.txt
src/modules/libgpiod/: CMakeLists.txt
src/modules/lla/: CMakeLists.txt
src/modules/monitor/: CMakeLists.txt  MonitorModule.cpp
src/modules/mqtt/: CMakeLists.txt
src/modules/notifd/: CMakeLists.txt
src/modules/pifacedigital/: CMakeLists.txt
src/modules/pifacedigital/lib/: CMakeLists.txt
src/modules/replication/: CMakeLists.txt
src/modules/rpleth/: CMakeLists.txt
src/modules/smtp/: CMakeLists.txt
src/modules/stdin-controller/: CMakeLists.txt
src/modules/sysfsgpio/: CMakeLists.txt
src/modules/tcp-notifier/: CMakeLists.txt  NotifierInstance.cpp
src/modules/test-and-reset/: CMakeLists.txt
src/modules/websock-api/: CMakeLists.txt  Service.hpp  WSServer.cpp
src/modules/websock-api/api/: APISession.cpp
src/modules/websock-api/api/search/: AccessPointSearch.cpp  CredentialSearch.cpp  DoorSearch.cpp  GroupSearch.cpp  HardwareSearch.cpp  SearchBase.hpp
src/modules/wiegand/: CMakeLists.txt  wiegand.cpp
src/modules/ws-notifier/: CMakeLists.txt
src/tools/: DatabaseLogSink.cpp  DatabaseLogSink.hpp  LogEntry.cpp  Schedule.cpp  log.hpp  version.cpp
src/tools/db/: STDTimePointODB.hpp
test/: AuthFile.cpp  CMakeLists.txt  ConfigManager.cpp  Registry.cpp  RemoteControlSecurity.cpp  Rpleth.cpp  ScheduleValidator.cpp
test/data/: AuthFile-6.xml  AuthFile-7.xml
tests/: Dockerfile
tests/test_login_with_default_credentials/: kernel.xml
