set(BENCHTOGGLE_BIN bench-toggle)

set(BENCHTOGGLE_SRCS
    bench-toggle.cpp
)

add_library(${BENCHTOGGLE_BIN} SHARED ${BENCHTOGGLE_SRCS})

set_target_properties(${BENCHTOGGLE_BIN} PROPERTIES
    COMPILE_FLAGS "${MODULE_COMPILE_FLAGS}"
    )

target_link_libraries(${BENCHTOGGLE_BIN} PUBLIC
          ${LEOSAC_MODULE_BASE_DEPENDENCIES} )

install(TARGETS ${BENCHTOGGLE_BIN} DESTINATION ${LEOSAC_MODULE_INSTALL_DIR})
